--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/vedict.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js"
   },
